--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ importlib_metadata==8.7.0
 intel-openmp==2021.4.0
 itsdangerous==2.2.0
 jax==0.4.31
-jaxlib==0.4.31
+jaxlib>=0.4.38
 jieba3k==0.35.1
 Jinja2==3.1.4
 joblib==1.4.2
