--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ anyio==4.6.2.post1
 APScheduler==3.10.4
 asgiref==3.8.1
 astunparse==1.6.3
+async-timeout==4.0.3
 attrs==23.2.0
 beautifulsoup4==4.12.3
 billiard==4.2.0
@@ -43,6 +44,7 @@ django-ninja==1.3.0
 docx2txt==0.9
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 entrypoints==0.4
+exceptiongroup==1.3.0
 feedfinder2==0.0.4
 feedparser==6.0.11
 filelock==3.14.0
@@ -58,6 +60,7 @@ gensim==4.3.3
 geocoder==1.38.1
 geographiclib==1.52
 geopy==2.2.0
+gevent==24.2.1
 gitdb==4.0.11
 GitPython==3.1.43
 google-auth==2.36.0
@@ -74,8 +77,8 @@ idna==3.7
 importlib_metadata==8.7.0
 intel-openmp==2021.4.0
 itsdangerous==2.2.0
-jax==0.4.31
-jaxlib>=0.4.38
+jax==0.4.38
+jaxlib==0.4.38
 jieba3k==0.35.1
 Jinja2==3.1.4
 joblib==1.4.2
@@ -102,7 +105,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.9.2
 mdurl==0.1.2
-mediapipe==0.10.14
+mediapipe==0.10.13
 mkl==2021.4.0
 ml-dtypes==0.4.0
 mpmath==1.3.0
@@ -130,7 +133,7 @@ pillow==10.3.0
 plotly==5.10.0
 preshed==3.0.9
 prompt_toolkit==3.0.46
-protobuf==3.20.3
+protobuf==4.25.3
 psutil==6.0.0
 py4j==0.10.9.7
 pyarrow==16.1.0
@@ -170,7 +173,6 @@ scikit-learn==1.5.1
 scipy==1.13.1
 seaborn==0.13.2
 semver==3.0.4
-setuptools==70.0.0
 sgmllib3k==1.0.0
 six==1.16.0
 smart-open==6.4.0
@@ -195,6 +197,7 @@ tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 tensorflow-intel==2.17.0
+tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 textblob==0.19.0
 tf_keras==2.17.0
@@ -223,7 +226,6 @@ watchdog==4.0.1
 wcwidth==0.2.13
 weasel==0.3.4
 Werkzeug==3.0.3
-wheel==0.44.0
 wrapt==1.16.0
 xxhash==3.5.0
 yarl==1.9.4
