--- a/requirements.txt
+++ b/requirements.txt
@@ -195,7 +195,7 @@ tenacity==8.3.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
-tensorflow-intel==2.17.0
+tensorflow==2.17.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.4.0
 textblob==0.19.0
